Сверстан главный экран и шапка сайта без адаптива

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,3 +1,19 @@
- * 
-    box-sizing: border-box
+//Базовые настройки сетки
+@import 'grid'
+// Настройки шрифтов
+@import 'fonts'
+// Настройки цветов
+@import 'colors'
+//Настройки интерфейса
+@import 'intarface'
+
+//Шапка сайта
+@import 'blocks/navbar' 
+
+//Блок hero
+@import 'blocks/hero' 
+
+
+
+
      
