--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -3,3 +3,16 @@
 .container
 	max-width: 1170px
 	margin: auto
+
+@media (max-width: 1199px)
+	.container
+		width: 960px 
+
+@media (max-width: 991px)
+	.container
+		width: 750px 
+
+@media (max-width: 768px)
+	.container
+		width: 100%
+		padding: 0 20px 
