--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -13,4 +13,13 @@
 		margin-bottom: 67px
 		font-size: 30px
 		+bold
+@media (max-width: 768px)
+	.hero
+		background-size: cover
+		background-position: top left 50%
+@media (max-width: 480px)
+	.hero
+		background-size: cover
+		background-position: top left 
 
+ 
