--- a/sass/blocks/_navbar.sass
+++ b/sass/blocks/_navbar.sass
@@ -9,7 +9,6 @@
 		display: flex
 		align-items: center
 		justify-content: space-between
-		min-height: 80px
 	&__mobile, &__land-line
 		text-align: right
 	&__phone
@@ -35,7 +34,7 @@
 	background-color: $primary
 	color: #ffffff
 	transition: 0.2s
-	transform: translateY(-100%)
+	transform: translateY(-200%)
 	&_active
 		transform: translateY(0%)
 	
@@ -81,11 +80,22 @@
 		color: $text-color-light
 		font-size: 14px
 
+@media (max-width: 991px)
+	.navbar 
+		&__mobile, &__land-line
+			display: none
 
-
-
-
-
+@media (max-width: 576px)
+	.logo
+		display: none
+	.menu
+		top: 60px
+		&-button
+			height: 60px 
+		&__nav
+			flex-direction: column
+		&__link
+			margin-bottom: 20px
 
 
 
