--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -1,9 +1,10 @@
 .hero
-	background: #fffefc url('../image/hero/hero-bg.jpg') no-repeat center center
+	background: #fffefc url('../image/hero/hero-bg.jpg') no-repeat center top -60px
 	background-size: cover
-	padding-top: 180px
+	padding-top: 120px
 	padding-bottom: 270px
 	height: 100vh
+	margin-top: 80px
 
 	&__title
 		font-size: 30px
@@ -22,4 +23,5 @@
 		background-size: cover
 		background-position: top left 
 
- 
+ .test
+	 
